[redhat] kernel-5.14.0-142.el9
Signed-off-by: Patrick Talbert <ptalbert@redhat.com>

--- a/redhat/kernel.changelog-9.1
+++ b/redhat/kernel.changelog-9.1
@@ -1,3 +1,284 @@
+* Thu Aug 04 2022 Patrick Talbert <ptalbert@redhat.com> [5.14.0-142.el9]
+- sit: do not call ipip6_dev_free() from sit_init_net() (Hangbin Liu) [2089080]
+- net: ping6: Fix memleak in ipv6_renew_options(). (Ivan Vecera) [2112338]
+- dma-direct: use the correct size for dma_set_encrypted() (Jerry Snitselaar) [2105609]
+- dma-debug: make things less spammy under memory pressure (Jerry Snitselaar) [2105609]
+- dma-iommu: Check that swiotlb is active before trying to use it (Jerry Snitselaar) [2105609]
+- Documentation: add a description for net.core.high_order_alloc_disable (Antoine Tenart) [2068582]
+- Input: bcm5974 - set missing URB_NO_TRANSFER_DMA_MAP urb flag (Benjamin Tissoires) [2070873]
+- Input: add Marine Navigation Keycodes (Benjamin Tissoires) [2070873]
+- Revert "Input: clear BTN_RIGHT/MIDDLE on buttonpads" (Benjamin Tissoires) [2070873]
+- Input: synaptics - enable InterTouch on ThinkPad T14/P14s Gen 1 AMD (Benjamin Tissoires) [2070873]
+- Input: add bounds checking to input_set_capability() (Benjamin Tissoires) [2070873]
+- Input: add input_copy_abs() function (Benjamin Tissoires) [2070873]
+- Input: set EV_ABS in dev->evbit even if input_alloc_absinfo() fails (Benjamin Tissoires) [2070873]
+- Input: aiptek - properly check endpoint type (Benjamin Tissoires) [2070873]
+- Input: elan_i2c - fix regulator enable count imbalance after suspend/resume (Benjamin Tissoires) [2070873]
+- Input: elan_i2c - move regulator_[en|dis]able() out of elan_[en|dis]able_power() (Benjamin Tissoires) [2070873]
+- Input: psmouse - set up dependency between PS/2 and SMBus companions (Benjamin Tissoires) [2070873]
+- Input: clear BTN_RIGHT/MIDDLE on buttonpads (Benjamin Tissoires) [2070873]
+- Input: gpio-keys - avoid clearing twice some memory (Benjamin Tissoires) [2070873]
+- Input: byd - fix typo in a comment (Benjamin Tissoires) [2070873]
+- Input: ff-core - correct magnitude setting for rumble compatibility (Benjamin Tissoires) [2070873]
+- Input: wacom_i2c - clean up the query device fields (Benjamin Tissoires) [2070873]
+- Input: appletouch - initialize work before device registration (Benjamin Tissoires) [2070873]
+- Input: elants_i2c - do not check Remark ID on eKTH3900/eKTH5312 (Benjamin Tissoires) [2070873]
+- Input: i8042 - enable deferred probe quirk for ASUS UM325UA (Benjamin Tissoires) [2070873]
+- Input: elantech - fix stack out of bound access in elantech_change_report_id() (Benjamin Tissoires) [2070873]
+- Input: i8042 - add deferred probe support (Benjamin Tissoires) [2070873]
+- Input: wacom_i2c - use macros for the bit masks (Benjamin Tissoires) [2070873]
+- Input: elantench - fix misreporting trackpoint coordinates (Benjamin Tissoires) [2070873]
+- Input: synaptics-rmi4 - Fix device hierarchy (Benjamin Tissoires) [2070873]
+- Input: remove unused header <linux/input/cy8ctmg110_pdata.h> (Benjamin Tissoires) [2070873]
+- Input: elants_i2c - make use of devm_add_action_or_reset() (Benjamin Tissoires) [2070873]
+- Input: touchscreen - avoid bitwise vs logical OR warning (Benjamin Tissoires) [2070873]
+- Input: elan_i2c - reduce the resume time for controller in Whitebox (Benjamin Tissoires) [2070873]
+- Input: Fix spelling mistake in Kconfig "useable" -> "usable" (Benjamin Tissoires) [2070873]
+- Input: Fix spelling mistake in Kconfig "Modul" -> "Module" (Benjamin Tissoires) [2070873]
+- Input: remove dead CSR Prima2 PWRC driver (Benjamin Tissoires) [2070873]
+- Input: parkbd - switch to use module_parport_driver() (Benjamin Tissoires) [2070873]
+- Revert "Input: serio - make write method mandatory" (Benjamin Tissoires) [2070873]
+- Input: serio - make write method mandatory (Benjamin Tissoires) [2070873]
+- Input: ixp4xx-beeper - delete driver (Benjamin Tissoires) [2070873]
+- HID: elan: Fix potential double free in elan_input_configured (Benjamin Tissoires) [2070873]
+- HID: hid-led: fix maximum brightness for Dream Cheeky (Benjamin Tissoires) [2070873]
+- HID: bigben: fix slab-out-of-bounds Write in bigben_probe (Benjamin Tissoires) [2070873]
+- HID: multitouch: add quirks to enable Lenovo X12 trackpoint (Benjamin Tissoires) [2070873]
+- HID: multitouch: Add support for Google Whiskers Touchpad (Benjamin Tissoires) [2070873]
+- HID: Add driver for Razer Blackwidow keyboards (Benjamin Tissoires) [2070873]
+- HID: add SiGma Micro driver (Benjamin Tissoires) [2070873]
+- HID: google: modify HID device groups of eel (Benjamin Tissoires) [2070873]
+- HID: google: Add support for vivaldi to hid-hammer (Benjamin Tissoires) [2070873]
+- HID: google: extract Vivaldi hid feature mapping for use in hid-hammer (Benjamin Tissoires) [2070873]
+- Input: extract ChromeOS vivaldi physmap show function (Benjamin Tissoires) [2070873]
+- HID: google: switch to devm when registering keyboard backlight LED (Benjamin Tissoires) [2070873]
+- HID: intel-ish-hid: Use dma_alloc_coherent for firmware update (Benjamin Tissoires) [2070873]
+- HID: input: accommodate priorities for slotted devices (Benjamin Tissoires) [2070873]
+- HID: input: remove the need for HID_QUIRK_INVERT (Benjamin Tissoires) [2070873]
+- HID: input: enforce Invert usage to be processed before InRange (Benjamin Tissoires) [2070873]
+- HID: core: for input reports, process the usages by priority list (Benjamin Tissoires) [2070873]
+- HID: compute an ordered list of input fields to process (Benjamin Tissoires) [2070873]
+- HID: input: move up out-of-range processing of input values (Benjamin Tissoires) [2070873]
+- HID: input: rework spaghetti code with switch statements (Benjamin Tissoires) [2070873]
+- HID: input: tag touchscreens as such if the physical is not there (Benjamin Tissoires) [2070873]
+- HID: core: split data fetching from processing in hid_input_field() (Benjamin Tissoires) [2070873]
+- HID: core: de-duplicate some code in hid_input_field() (Benjamin Tissoires) [2070873]
+- HID: core: statically allocate read buffers (Benjamin Tissoires) [2070873]
+- HID: uclogic: Support multiple frame input devices (Benjamin Tissoires) [2070873]
+- HID: uclogic: Define report IDs before their descriptors (Benjamin Tissoires) [2070873]
+- HID: uclogic: Put version first in rdesc namespace (Benjamin Tissoires) [2070873]
+- HID: uclogic: Use "frame" instead of "buttonpad" (Benjamin Tissoires) [2070873]
+- HID: uclogic: Use different constants for frame report IDs (Benjamin Tissoires) [2070873]
+- HID: uclogic: Specify total report size to buttonpad macro (Benjamin Tissoires) [2070873]
+- HID: uclogic: Switch to matching subreport bytes (Benjamin Tissoires) [2070873]
+- HID: uclogic: Replace pen_frame_flag with subreport_list (Benjamin Tissoires) [2070873]
+- HID: uclogic: Remove pen usage masking (Benjamin Tissoires) [2070873]
+- HID: apple: properly reflect LEDS dependency (Benjamin Tissoires) [2070873]
+- HID: apple: Add fn mapping for MacBook Pros with Touch Bar (Benjamin Tissoires) [2070873]
+- HID: apple: Add necessary IDs and configuration for T2 Macs. (Benjamin Tissoires) [2070873]
+- HID: apple: Add support for keyboard backlight on certain T2 Macs. (Benjamin Tissoires) [2070873]
+- HID: apple: Report Magic Keyboard 2021 with fingerprint reader battery over USB (Benjamin Tissoires) [2070873]
+- HID: apple: Report Magic Keyboard 2021 battery over USB (Benjamin Tissoires) [2070873]
+- HID: apple: Magic Keyboard 2015 FN key mapping (Benjamin Tissoires) [2070873]
+- HID: apple: Magic Keyboard first generation FN key mapping (Benjamin Tissoires) [2070873]
+- HID: apple: Refactor key translation setup (Benjamin Tissoires) [2070873]
+- HID: uclogic: Handle virtual frame reports (Benjamin Tissoires) [2070873]
+- HID: uclogic: Skip non-input raw events earlier (Benjamin Tissoires) [2070873]
+- HID: uclogic: Access pen/frame params directly in raw_event handling (Benjamin Tissoires) [2070873]
+- HID: uclogic: Split pen and frame raw event handling (Benjamin Tissoires) [2070873]
+- HID: uclogic: Support Huion 13th frame button (Benjamin Tissoires) [2070873]
+- HID: uclogic: Rename Huion HS64 PID to Huion Tablet 2 (Benjamin Tissoires) [2070873]
+- HID: uclogic: Support Huion tilt reporting (Benjamin Tissoires) [2070873]
+- HID: i2c-hid: remove unneeded semicolon (Benjamin Tissoires) [2070873]
+- HID: i2c-hid: note that I2C xfer buffers are DMA-safe (Benjamin Tissoires) [2070873]
+- HID: i2c-hid: no longer need raw access to HID descriptor structure (Benjamin Tissoires) [2070873]
+- HID: i2c-hid: use helpers to do endian conversion in i2c_hid_get_input() (Benjamin Tissoires) [2070873]
+- HID: i2c-hid: rework i2c_hid_get_report() to use i2c_hid_xfer() (Benjamin Tissoires) [2070873]
+- HID: i2c-hid: convert i2c_hid_execute_reset() to use i2c_hid_xfer() (Benjamin Tissoires) [2070873]
+- HID: i2c-hid: create a helper for SET_POWER command (Benjamin Tissoires) [2070873]
+- HID: i2c-hid: define i2c_hid_read_register() and use it (Benjamin Tissoires) [2070873]
+- HID: i2c-hid: explicitly code setting and sending reports (Benjamin Tissoires) [2070873]
+- HID: i2c-hid: refactor reset command (Benjamin Tissoires) [2070873]
+- HID: i2c-hid: use "struct i2c_hid" as argument in most calls (Benjamin Tissoires) [2070873]
+- HID: i2c-hid: fix GET/SET_REPORT for unnumbered reports (Benjamin Tissoires) [2070873]
+- HID: i2c-hid: fix handling numbered reports with IDs of 15 and above (Benjamin Tissoires) [2070873]
+- HID: google: Use struct_size() helper in kzalloc() (Benjamin Tissoires) [2070873]
+- HID: Add new Letsketch tablet driver (Benjamin Tissoires) [2070873]
+- HID: elo: Revert USB reference counting (Benjamin Tissoires) [2070873]
+- HID: elo: fix memory leak in elo_probe (Benjamin Tissoires) [2070873]
+- HID: add mapping for KEY_ALL_APPLICATIONS (Benjamin Tissoires) [2070873]
+- HID: add mapping for KEY_DICTATE (Benjamin Tissoires) [2070873]
+- HID: nintendo: check the return value of alloc_workqueue() (Benjamin Tissoires) [2070873]
+- HID: vivaldi: fix sysfs attributes leak (Benjamin Tissoires) [2070873]
+- HID: hid-thrustmaster: fix OOB read in thrustmaster_interrupts (Benjamin Tissoires) [2070873]
+- HID: Add support for open wheel and no attachment to T300 (Benjamin Tissoires) [2070873]
+- HID: logitech-dj: add new lightspeed receiver id (Benjamin Tissoires) [2070873]
+- HID:Add support for UGTABLET WP5540 (Benjamin Tissoires) [2070873]
+- HID: i2c-hid: goodix: Fix a lockdep splat (Benjamin Tissoires) [2070873]
+- HID: apple: Set the tilde quirk flag on the Wellspring 5 and later (Benjamin Tissoires) [2070873]
+- HID: wacom: Avoid using stale array indicies to read contact count (Benjamin Tissoires) [2070873]
+- HID: wacom: Ignore the confidence flag when a touch is removed (Benjamin Tissoires) [2070873]
+- HID: wacom: Reset expected and received contact counts at the same time (Benjamin Tissoires) [2070873]
+- HID: uhid: Use READ_ONCE()/WRITE_ONCE() for ->running (Benjamin Tissoires) [2070873]
+- HID: uhid: Fix worker destroying device without any protection (Benjamin Tissoires) [2070873]
+- HID: vivaldi: Minor cleanups (Benjamin Tissoires) [2070873]
+- HID: vivaldi: fix handling devices not using numbered reports (Benjamin Tissoires) [2070873]
+- HID: Ignore battery for Elan touchscreen on HP Envy X360 15t-dr100 (Benjamin Tissoires) [2070873]
+- HID: magicmouse: Fix an error handling path in magicmouse_probe() (Benjamin Tissoires) [2070873]
+- HID: address kernel-doc warnings (Benjamin Tissoires) [2070873]
+- HID: intel-ish-hid: ishtp-fw-loader: Fix a kernel-doc formatting issue (Benjamin Tissoires) [2070873]
+- HID: intel-ish-hid: ipc: Specify no cache snooping on TGL and ADL (Benjamin Tissoires) [2070873]
+- HID: hid-uclogic-params: Invalid parameter check in uclogic_params_frame_init_v1_buttonpad (Benjamin Tissoires) [2070873]
+- HID: hid-uclogic-params: Invalid parameter check in uclogic_params_huion_init (Benjamin Tissoires) [2070873]
+- HID: hid-uclogic-params: Invalid parameter check in uclogic_params_get_str_desc (Benjamin Tissoires) [2070873]
+- HID: hid-uclogic-params: Invalid parameter check in uclogic_params_init (Benjamin Tissoires) [2070873]
+- HID: apple: Add Magic Keyboard 2021 with fingerprint reader FN key mapping (Benjamin Tissoires) [2070873]
+- HID: apple: Add 2021 magic keyboard FN key mapping (Benjamin Tissoires) [2070873]
+- HID: magicmouse: set Magic Trackpad 2021 name (Benjamin Tissoires) [2070873]
+- HID: magicmouse: set device name when it has been personalized (Benjamin Tissoires) [2070873]
+- HID: apple: Add 2021 Magic Keyboard with number pad (Benjamin Tissoires) [2070873]
+- HID: apple: Add 2021 Magic Keyboard with fingerprint reader (Benjamin Tissoires) [2070873]
+- HID: i2c-hid-of: Expose the touchscreen-inverted properties (Benjamin Tissoires) [2070873]
+- HID: quirks: Allow inverting the absolute X/Y values (Benjamin Tissoires) [2070873]
+- HID: hidraw: Replace hidraw device table mutex with a rwsem (Benjamin Tissoires) [2070873]
+- HID: thrustmaster use swap() to make code cleaner (Benjamin Tissoires) [2070873]
+- HID: debug: Add USI usages (Benjamin Tissoires) [2070873]
+- HID: input: Make hidinput_find_field() static (Benjamin Tissoires) [2070873]
+- HID: Add hid usages for USI style pens (Benjamin Tissoires) [2070873]
+- HID: hid-input: Add suffix also for HID_DG_PEN (Benjamin Tissoires) [2070873]
+- HID: Add map_msc() to avoid boilerplate code (Benjamin Tissoires) [2070873]
+- HID: do not inline some hid_hw_ functions (Benjamin Tissoires) [2070873]
+- HID: add suspend/resume helpers (Benjamin Tissoires) [2070873]
+- HID: apple: Report Magic Keyboard battery over USB (Benjamin Tissoires) [2070873]
+- HID: apple: Use BIT to define quirks (Benjamin Tissoires) [2070873]
+- HID: apple: Do not reset quirks when the Fn key is not found (Benjamin Tissoires) [2070873]
+- HID: magicmouse: Report battery level over USB (Benjamin Tissoires) [2070873]
+- HID: i2c-hid: Report wakeup events (Benjamin Tissoires) [2070873]
+- HID: potential dereference of null pointer (Benjamin Tissoires) [2070873]
+- HID: holtek: fix mouse probing (Benjamin Tissoires) [2070873]
+- HID: Ignore battery for Elan touchscreen on Asus UX550VE (Benjamin Tissoires) [2070873]
+- HID: intel-ish-hid: ipc: only enable IRQ wakeup when requested (Benjamin Tissoires) [2070873]
+- HID: google: add eel USB id (Benjamin Tissoires) [2070873]
+- HID: add USB_HID dependancy to hid-prodikeys (Benjamin Tissoires) [2070873]
+- HID: add USB_HID dependancy to hid-chicony (Benjamin Tissoires) [2070873]
+- HID: bigbenff: prevent null pointer dereference (Benjamin Tissoires) [2070873]
+- HID: sony: fix error path in probe (Benjamin Tissoires) [2070873]
+- HID: add USB_HID dependancy on some USB HID drivers (Benjamin Tissoires) [2070873]
+- HID: check for valid USB device for many HID drivers (Benjamin Tissoires) [2070873]
+- HID: wacom: fix problems when device is not a valid USB device (Benjamin Tissoires) [2070873]
+- HID: add hid_is_usb() function to make it simpler for USB detection (Benjamin Tissoires) [2070873]
+- HID: quirks: Add quirk for the Microsoft Surface 3 type-cover (Benjamin Tissoires) [2070873]
+- HID: multitouch: Fix Iiyama ProLite T1931SAW (0eef:0001 again!) (Benjamin Tissoires) [2070873]
+- HID: nintendo: eliminate dead datastructures in !CONFIG_NINTENDO_FF case (Benjamin Tissoires) [2070873]
+- HID: magicmouse: prevent division by 0 on scroll (Benjamin Tissoires) [2070873]
+- HID: thrustmaster: fix sparse warnings (Benjamin Tissoires) [2070873]
+- HID: Ignore battery for Elan touchscreen on HP Envy X360 15-eu0xxx (Benjamin Tissoires) [2070873]
+- HID: input: set usage type to key on keycode remap (Benjamin Tissoires) [2070873]
+- HID: input: Fix parsing of HID_CP_CONSUMER_CONTROL fields (Benjamin Tissoires) [2070873]
+- HID: ft260: fix i2c probing for hwmon devices (Benjamin Tissoires) [2070873]
+- Revert "HID: hid-asus.c: Maps key 0x35 (display off) to KEY_SCREENLOCK" (Benjamin Tissoires) [2070873]
+- HID: intel-ish-hid: fix module device-id handling (Benjamin Tissoires) [2070873]
+- HID: intel-ish-hid: hid-client: only load for matching devices (Benjamin Tissoires) [2070873]
+- HID: intel-ish-hid: fw-loader: only load for matching devices (Benjamin Tissoires) [2070873]
+- HID: intel-ish-hid: use constants for modaliases (Benjamin Tissoires) [2070873]
+- HID: wacom: Use "Confidence" flag to prevent reporting invalid contacts (Benjamin Tissoires) [2070873]
+- HID: nintendo: unlock on error in joycon_leds_create() (Benjamin Tissoires) [2070873]
+- HID: nintendo: fix -Werror build (Benjamin Tissoires) [2070873]
+- HID: playstation: require multicolor LED functionality (Benjamin Tissoires) [2070873]
+- HID: u2fzero: properly handle timeouts in usb_submit_urb (Benjamin Tissoires) [2070873]
+- HID: u2fzero: clarify error check and length calculations (Benjamin Tissoires) [2070873]
+- HID: u2fzero: Support NitroKey U2F revision of the device (Benjamin Tissoires) [2070873]
+- HID: wacom: Make use of the helper function devm_add_action_or_reset() (Benjamin Tissoires) [2070873]
+- HID: wacom: Shrink critical section in `wacom_add_shared_data` (Benjamin Tissoires) [2070873]
+- HID: nintendo: prevent needless queueing of the rumble worker (Benjamin Tissoires) [2070873]
+- HID: nintendo: ratelimit subcommands and rumble (Benjamin Tissoires) [2070873]
+- HID: nintendo: improve rumble performance and stability (Benjamin Tissoires) [2070873]
+- HID: nintendo: add IMU support (Benjamin Tissoires) [2070873]
+- HID: nintendo: add support for reading user calibration (Benjamin Tissoires) [2070873]
+- HID: nintendo: add support for charging grip (Benjamin Tissoires) [2070873]
+- HID: nintendo: set controller uniq to MAC (Benjamin Tissoires) [2070873]
+- HID: nintendo: reduce device removal subcommand errors (Benjamin Tissoires) [2070873]
+- HID: nintendo: patch hw version for userspace HID mappings (Benjamin Tissoires) [2070873]
+- HID: nintendo: send subcommands after receiving input report (Benjamin Tissoires) [2070873]
+- HID: nintendo: improve subcommand reliability (Benjamin Tissoires) [2070873]
+- HID: nintendo: add rumble support (Benjamin Tissoires) [2070873]
+- HID: nintendo: add home led support (Benjamin Tissoires) [2070873]
+- HID: nintendo: add power supply support (Benjamin Tissoires) [2070873]
+- HID: nintendo: add player led support (Benjamin Tissoires) [2070873]
+- HID: nintendo: add nintendo switch controller driver (Benjamin Tissoires) [2070873]
+- HID: playstation: fix return from dualsense_player_led_set_brightness() (Benjamin Tissoires) [2070873]
+- HID: playstation: expose DualSense player LEDs through LED class. (Benjamin Tissoires) [2070873]
+- leds: add new LED_FUNCTION_PLAYER for player LEDs for game controllers. (Benjamin Tissoires) [2070873]
+- Documentation: leds: standartizing LED names (Benjamin Tissoires) [2070873]
+- HID: playstation: expose DualSense lightbar through a multi-color LED. (Benjamin Tissoires) [2070873]
+- HID: surface-hid: Allow driver matching for target ID 1 devices (Benjamin Tissoires) [2070873]
+- HID: surface-hid: Use correct event registry for managing HID events (Benjamin Tissoires) [2070873]
+- HID: hid-asus.c: Maps key 0x35 (display off) to KEY_SCREENLOCK (Benjamin Tissoires) [2070873]
+- HID: apple: Bring back flag for Apple tilde key quirk (Benjamin Tissoires) [2070873]
+- HID: apple: Add support for the 2021 Magic Keyboard (Benjamin Tissoires) [2070873]
+- HID: apple: Rename MAGIC_KEYBOARD_ANSI to MAGIC_KEYBOARD_2015 (Benjamin Tissoires) [2070873]
+- HID: multitouch: disable sticky fingers for UPERFECT Y (Benjamin Tissoires) [2070873]
+- HID: cougar: Make use of the helper function devm_add_action_or_reset() (Benjamin Tissoires) [2070873]
+- HID: roccat: Use struct_group() to zero kone_mouse_event (Benjamin Tissoires) [2070873]
+- HID: cp2112: Use struct_group() for memcpy() region (Benjamin Tissoires) [2070873]
+- HID: Add support for side buttons of Xiaomi Mi Dual Mode Wireless Mouse Silent (Benjamin Tissoires) [2070873]
+- HID: hid-debug: clean up snprintf() checks in hid_resolv_usage() (Benjamin Tissoires) [2070873]
+- HID: apple: Eliminate obsolete IR receiver quirks (Benjamin Tissoires) [2070873]
+- HID: core: add TransducerSerialNumber2 (Benjamin Tissoires) [2070873]
+- HID: u2fzero: ignore incomplete packets without data (Benjamin Tissoires) [2070873]
+- HID: wacom: Add new Intuos BT (CTL-4100WL/CTL-6100WL) device IDs (Benjamin Tissoires) [2070873]
+- HID: apple: Fix logical maximum and usage maximum of Magic Keyboard JIS (Benjamin Tissoires) [2070873]
+- HID: betop: fix slab-out-of-bounds Write in betop_probe (Benjamin Tissoires) [2070873]
+- HID: usbhid: Simplify code in hid_submit_ctrl() (Benjamin Tissoires) [2070873]
+- HID: usbhid: Fix warning caused by 0-length input reports (Benjamin Tissoires) [2070873]
+- HID: usbhid: Fix flood of "control queue full" messages (Benjamin Tissoires) [2070873]
+- HID: sony: Fix more ShanWan clone gamepads to not rumble when plugged in. (Benjamin Tissoires) [2070873]
+- HID: sony: support for the ghlive ps4 dongles (Benjamin Tissoires) [2070873]
+- HID: thrustmaster: clean up Makefile and adapt quirks (Benjamin Tissoires) [2070873]
+- HID: i2c-hid: Fix Elan touchpad regression (Benjamin Tissoires) [2070873]
+- HID: asus: Prevent Claymore sending suspend event (Benjamin Tissoires) [2070873]
+- HID: logitech-hidpp: battery: provide CAPACITY property for newer devices (Benjamin Tissoires) [2070873]
+- HID: thrustmaster: Fix memory leak in thrustmaster_interrupts() (Benjamin Tissoires) [2070873]
+- HID: thrustmaster: Fix memory leak in remove (Benjamin Tissoires) [2070873]
+- HID: thrustmaster: Fix memory leaks in probe (Benjamin Tissoires) [2070873]
+- HID: elo: update the reference count of the usb device structure (Benjamin Tissoires) [2070873]
+- HID: logitech-hidpp: Use 'atomic_inc_return' instead of hand-writing it (Benjamin Tissoires) [2070873]
+- HID: apple: Add missing scan code event for keys handled by hid-apple (Benjamin Tissoires) [2070873]
+- HID: cmedia: add support for HS-100B mute button (Benjamin Tissoires) [2070873]
+- HID: i2c-hid: goodix: Use the devm variant of regulator_register_notifier() (Benjamin Tissoires) [2070873]
+- HID: wacom: Refactor touch input mute checks into a common function (Benjamin Tissoires) [2070873]
+- HID: wacom: Avoid sending empty sync events (Benjamin Tissoires) [2070873]
+- HID: wacom: Short-circuit processing of touch when it is disabled (Benjamin Tissoires) [2070873]
+- HID: wacom: set initial hardware touch switch state to 'off' (Benjamin Tissoires) [2070873]
+- HID: usbhid: free raw_report buffers in usbhid_stop (Benjamin Tissoires) [2070873]
+- HID: i2c-hid: goodix: Tie the reset line to true state of the regulator (Benjamin Tissoires) [2070873]
+- HID: magicmouse: high-resolution scroll threshold (Benjamin Tissoires) [2070873]
+- HID: magicmouse: enable high-resolution scroll (Benjamin Tissoires) [2070873]
+- HID: input: do not report stylus battery state as "full" (Benjamin Tissoires) [2070873]
+- HID: amd_sfh: Modify the hid name (Benjamin Tissoires) [2054930 2070873]
+- HID: amd_sfh: Modify the bus name (Benjamin Tissoires) [2054930 2070873]
+- HID: amd_sfh: Add support for sensor discovery (Benjamin Tissoires) [2054930 2070873]
+- HID: amd_sfh: Remove useless DMA-32 fallback configuration (Benjamin Tissoires) [2054930 2070873]
+- HID: amd_sfh: Add interrupt handler to process interrupts (Benjamin Tissoires) [2054930 2070873]
+- HID: amd_sfh: Add functionality to clear interrupts (Benjamin Tissoires) [2054930 2070873]
+- HID: amd_sfh: Disable the interrupt for all command (Benjamin Tissoires) [2054930 2070873]
+- HID: amd_sfh: Correct the structure field name (Benjamin Tissoires) [2054930 2070873]
+- HID: amd_sfh: Handle amd_sfh work buffer in PM ops (Benjamin Tissoires) [2054930 2070873]
+- HID: amd_sfh: Add illuminance mask to limit ALS max value (Benjamin Tissoires) [2054930 2070873]
+- HID: amd_sfh: Increase sensor command timeout (Benjamin Tissoires) [2054930 2070873]
+- HID: amd_sfh: Update Copyright details (Benjamin Tissoires) [2054930 2070873]
+- HID: amd_sfh: switch from 'pci_' to 'dev_' API (Benjamin Tissoires) [2054930 2070873]
+- HID: amd_sfh: Use dma_set_mask_and_coherent() (Benjamin Tissoires) [2054930 2070873]
+- HID: amd_sfh: Fix potential NULL pointer dereference (Benjamin Tissoires) [2054930 2070873]
+- HID: amd_sfh: switch from 'pci_' to 'dma_' API (Benjamin Tissoires) [2054930 2070873]
+- HID: amd_sfh: Fix potential NULL pointer dereference (Benjamin Tissoires) [2054930 2070873]
+- HID: amd_sfh: Add dyndbg prints for debugging (Benjamin Tissoires) [2054930 2070873]
+- HID: amd_sfh: Add support for PM suspend and resume (Benjamin Tissoires) [2054930 2070873]
+- HID: amd_sfh: Move hid probe after sensor is enabled (Benjamin Tissoires) [2054930 2070873]
+- HID: amd_sfh: Add command response to check command status (Benjamin Tissoires) [2054930 2070873]
+- HID: amd_sfh: Fix period data field to enable sensor (Benjamin Tissoires) [2054930 2070873]
+Resolves: rhbz#2089080, rhbz#2112338, rhbz#2105609, rhbz#2068582, rhbz#2070873, rhbz#2054930
+
 * Wed Aug 03 2022 Patrick Talbert <ptalbert@redhat.com> [5.14.0-141.el9]
 - Documentation: Add an explanation of NFSv4 client identifiers (Dave Wysochanski) [2112933]
 - powerpc/bpf: Fix use of user_pt_regs in uapi (Desnes A. Nunes do Rosario) [2113065]
