[redhat] kernel-5.14.0-145.el9
Signed-off-by: Jan Stancek <jstancek@redhat.com>

--- a/redhat/kernel.changelog-9.1
+++ b/redhat/kernel.changelog-9.1
@@ -1,3 +1,69 @@
+* Wed Aug 10 2022 Jan Stancek <jstancek@redhat.com> [5.14.0-145.el9]
+- KVM: x86: do not report preemption if the steal time cache is stale (Vitaly Kuznetsov) [2115238]
+- KVM: x86: revalidate steal time cache if MSR value changes (Vitaly Kuznetsov) [2115238]
+- KVM: nVMX: Always enable TSC scaling for L2 when it was enabled for L1 (Vitaly Kuznetsov) [2115238]
+- KVM: x86: Fully initialize 'struct kvm_lapic_irq' in kvm_pv_kick_cpu_op() (Vitaly Kuznetsov) [2115238]
+- KVM: SEV: Init target VMCBs in sev_migrate_from (Vitaly Kuznetsov) [2115238]
+- KVM: SVM: fix tsc scaling cache logic (Vitaly Kuznetsov) [2115238]
+- KVM: x86/mmu: Check every prev_roots in __kvm_mmu_free_obsolete_roots() (Vitaly Kuznetsov) [2115238]
+- KVM: LAPIC: Drop pending LAPIC timer injection when canceling the timer (Vitaly Kuznetsov) [2115238]
+- KVM: x86: avoid calling x86 emulator without a decoded instruction (Vitaly Kuznetsov) [2115238]
+- KVM: SVM: Use kzalloc for sev ioctl interfaces to prevent kernel data leak (Vitaly Kuznetsov) [2115238]
+- KVM: x86: avoid loading a vCPU after .vm_destroy was called (Vitaly Kuznetsov) [2115238]
+- KVM: nVMX: Clear IDT vectoring on nested VM-Exit for double/triple fault (Vitaly Kuznetsov) [2115238]
+- KVM: nVMX: Leave most VM-Exit info fields unmodified on failed VM-Entry (Vitaly Kuznetsov) [2115238]
+- KVM: x86: Drop WARNs that assert a triple fault never "escapes" from L2 (Vitaly Kuznetsov) [2115238]
+- virtio-ring: fix DMA metadata flags (Cindy Lu) [2000425]
+- RDMA/cxgb4: Set queue pair state when being queried (Rahul Lakkireddy) [2109523]
+- RDMA/cxgb4: Use non-atomic bitmap functions when possible (Rahul Lakkireddy) [2109523]
+- RDMA/cxgb4: Use bitmap_set() when applicable (Rahul Lakkireddy) [2109523]
+- RDMA/cxgb4: Use bitmap_zalloc() when applicable (Rahul Lakkireddy) [2109523]
+- RDMA/cxgb4: Use helper function to set GUIDs (Rahul Lakkireddy) [2109523]
+- cxgb4: Use the bitmap API to allocate bitmaps (Rahul Lakkireddy) [2109520]
+- cxgb4: Fix typo in string (Rahul Lakkireddy) [2109520]
+- cxgb4/cxgb4vf: Fix typo in comments (Rahul Lakkireddy) [2109520]
+- cxgb4vf: remove unexpected word "the" (Rahul Lakkireddy) [2109520]
+- net: chelsio: cxgb4: Avoid potential negative array offset (Rahul Lakkireddy) [2109520]
+- libcxgb: Don't accidentally set RTO_ONLINK in cxgb_find_route() (Rahul Lakkireddy) [2109520]
+- cxgb4vf: Remove useless DMA-32 fallback configuration (Rahul Lakkireddy) [2109520]
+- cxgb4: Remove useless DMA-32 fallback configuration (Rahul Lakkireddy) [2109520]
+- cxgb4: allow reading unrecognized port module eeprom (Rahul Lakkireddy) [2109520]
+- net: chelsio: cxgb4vf: Fix an error code in cxgb4vf_pci_probe() (Rahul Lakkireddy) [2109520]
+- cxgb4: Use struct_group() for memcpy() region (Rahul Lakkireddy) [2109520]
+- cxgb4: fix eeprom len when diagnostics not implemented (Rahul Lakkireddy) [2109520]
+- ethernet: use eth_hw_addr_set() for dev->addr_len cases (Rahul Lakkireddy) [2109520]
+- net: chelsio: cxgb4vf: Make use of the helper function dev_err_probe() (Rahul Lakkireddy) [2109520]
+- cxgb4: improve printing NIC information (Rahul Lakkireddy) [2109520]
+- net: chelsio: switch from 'pci_' to 'dma_' API (Rahul Lakkireddy) [2109520]
+- cxgb4: make the array match_all_mac static, makes object smaller (Rahul Lakkireddy) [2109520]
+- scsi: mpt3sas: Stop fw fault watchdog work item during system shutdown (Tomas Henzl) [2112378]
+- redhat: nvme/tcp mistakenly uses blk_mq_tag_to_rq(nvme_tcp_tagset(queue)) (John Meneghini) [2112031]
+- bnxt_en: Fix bnxt_refclk_read() (Ken Cox) [2111502]
+- bnxt_en: fix livepatch query (Ken Cox) [2111502]
+- bnxt_en: Fix bnxt_reinit_after_abort() code path (Ken Cox) [2111502]
+- bnxt_en: reclaim max resources if sriov enable fails (Ken Cox) [2111502]
+- eth: bnxt: make ulp_id unsigned to make GCC 12 happy (Ken Cox) [2111502]
+- igc: Reinstate IGC_REMOVED logic and implement it properly (Corinna Vinschen) [2037987]
+- intel/igc:fix repeated words in comments (Corinna Vinschen) [2037987]
+- intel: remove unused macros (Corinna Vinschen) [2037987]
+- igc: Change type of the 'igc_check_downshift' method (Corinna Vinschen) [2037987]
+- igc: Remove unused phy_type enum (Corinna Vinschen) [2037987]
+- igc: Remove igc_set_spd_dplx method (Corinna Vinschen) [2037987]
+- igc: Fix suspending when PTM is active (Corinna Vinschen) [2037987]
+- igc: Fix BUG: scheduling while atomic (Corinna Vinschen) [2037987]
+- igc: Fix infinite loop in release_swfw_sync (Corinna Vinschen) [2037987]
+- igc: igc_write_phy_reg_gpy: drop premature return (Corinna Vinschen) [2037987]
+- igc: igc_read_phy_reg_gpy: drop premature return (Corinna Vinschen) [2037987]
+- igc: don't reserve excessive XDP_PACKET_HEADROOM on XSK Rx to skb (Corinna Vinschen) [2037987]
+- igc: Remove useless DMA-32 fallback configuration (Corinna Vinschen) [2037987]
+- igc: switch to napi_build_skb() (Corinna Vinschen) [2037987]
+- igc: Remove obsolete define (Corinna Vinschen) [2037987]
+- igc: Remove obsolete mask (Corinna Vinschen) [2037987]
+- igc: Remove obsolete nvm type (Corinna Vinschen) [2037987]
+- igc: Remove unused phy type (Corinna Vinschen) [2037987]
+- igc: Remove unused _I_PHY_ID define (Corinna Vinschen) [2037987]
+Resolves: rhbz#2115238, rhbz#2000425, rhbz#2109523, rhbz#2109520, rhbz#2112378, rhbz#2112031, rhbz#2111502, rhbz#2037987
+
 * Mon Aug 08 2022 Jan Stancek <jstancek@redhat.com> [5.14.0-144.el9]
 - dm raid: fix address sanitizer warning in raid_resume (Benjamin Marzinski) [2115117]
 - dm raid: fix address sanitizer warning in raid_status (Benjamin Marzinski) [2115117]
